<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start|left|top"
    android:background="@color/colorLightOrange"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/KnowledgeTitle"
        android:text="@string/KnowledgeTitle"
        android:contentDescription="@string/KnowledgeTitleDescription"
        android:textColor="#000000"
        android:textSize="30sp"
        android:layout_gravity="center" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/KnowledgeText1"
                android:id="@+id/KnowledgeText"
                android:textSize="18sp"
                android:textColor="#000000" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>