<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start|left|top"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="10"
        android:background="@color/colorPrimaryDark" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/InfoTitle"
            android:id="@+id/InfoTitleText"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:id="@+id/InfoTitle"
            android:src="@drawable/logowhite"
            android:contentDescription="@string/ListTitleDescription"
            android:scaleType="fitEnd"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/LoadingTitle"
                android:id="@+id/ViewItemName"
                android:textSize="30sp"
                android:padding="5dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:id="@+id/ViewImage"
                android:contentDescription="@string/TeaImage1Description"
                android:src="@drawable/loading"
                android:padding="5dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Blank"
                android:id="@+id/ViewPrice"
                android:padding="5dp"
                android:textSize="20sp"
                android:textColor="#000000" />

            <ImageButton
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:id="@+id/TeaInfoBuyButton"
                android:src="@drawable/buybutton"
                android:scaleType="centerInside"
                android:background="#FFFFFF"
                android:padding="5dp"
                android:contentDescription="@string/BuyButtonDescription"
                android:onClick="GoBuyTea"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Blank"
                android:id="@+id/ViewInfo"
                android:padding="5dp"
                android:textSize="20sp"
                android:textColor="#000000" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>