<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start|left|top"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="10"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CheckTitle"
            android:id="@+id/ListTitleText"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:id="@+id/ListTitle"
            android:src="@drawable/logowhite"
            android:contentDescription="@string/ListTitleDescription"
            android:scaleType="fitEnd"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SelectOrder"
            android:id="@+id/SelectOrder"
            android:textSize="25sp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" />

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/OrderSpinner"
            android:layout_weight="5"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/OrderView"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/OrderText"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/OrderText2"
                    android:textSize="20sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Cancel"
                    android:id="@+id/CancelButton"
                    android:background="@color/colorText"
                    android:textSize="25sp"
                    android:textColor="#FFFFFF"
                    android:layout_margin="10dp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>